# satua

./: LICENSE  README.md  angular.json  package-lock.json  package.json
satua-api/: .gitignore  README.md  package.json  pyproject.toml  wrangler.toml
satua-api/migrations/: 0001_create_story_table.sql
satua-api/src/: base-text-generator.ts  chapter-generator.ts  chapter.ts  index.ts  open-ai-text-generator-model.ts  story-generator.ts  story-repository.ts  story.ts  text-generator-model-factory.ts
satua-api/src/satua_api/: crew.py  main.py
satua-api/src/satua_api/config/: agents.yaml  tasks.yaml
satua-api/src/text-generator/: base-text-generator.ts  cloudflare-text-generator-model.ts  text-generator-model-factory.ts  text-generator-model.ts
satua-web/: package.json
satua-web/src/app/: app.component.ts
src/: index.html
src/app/: app.component.spec.ts
web/: README.md  angular.json  package-lock.json
